[package]
name = "rust-manifest-types"
version = "0.1.0-alpha.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies]
os_pipe = "0.9.2"
jsonschema_code_generator = "2.0.0"
